[gd_scene load_steps=4 format=3 uid="uid://b2bpfoxricine"]

[ext_resource type="Texture2D" uid="uid://bv7xbse7ahjhp" path="res://assets/rainbowegg.png" id="1_ekafl"]
[ext_resource type="Script" path="res://scripts/rainbowegg.gd" id="1_sfffg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_chojk"]
radius = 12.9148
height = 25.8295

[node name="RainbowEgg" type="Node2D"]
z_index = 1
position = Vector2(558, 54)
script = ExtResource("1_sfffg")

[node name="EggBody" type="RigidBody2D" parent="." groups=["rainbow_egg"]]
collision_layer = 2
mass = 1.5
max_contacts_reported = 2
contact_monitor = true
lock_rotation = true
freeze_mode = 1

[node name="EggSprite" type="Sprite2D" parent="EggBody"]
modulate = Color(1.5, 1.5, 1.5, 1)
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("1_ekafl")

[node name="EggCollision" type="CollisionShape2D" parent="EggBody"]
position = Vector2(-1, -3)
scale = Vector2(1.7647, 1.85834)
shape = SubResource("CapsuleShape2D_chojk")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="EggBody" to="." method="_on_egg_body_body_entered" flags=18]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
